Bug 388266 - Closing calculate occupied space window does not abort the calculation
Summary: Closing calculate occupied space window does not abort the calculation
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Alex Bikadorov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-12-27 03:31 UTC by Pozsgay Máté
Modified: 2018-02-22 21:06 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pozsgay Máté 2017-12-27 03:31:01 UTC
According to the documentation pressing the "cancel" button on the "Calculate occupied space" window aborts the calculation, which is true, but I expect similar results by closing the window using ESC, or the window buttons. Currently doing so closes the window, but the calculations are continuing in the background. Since this job isn't published in the job manager I found no other way to cancel the calculation but closing the whole application.
Comment 1 Nikita Melnichenko 2018-02-16 06:01:13 UTC
I confirm it can be reproduced on master.
Comment 2 Davide Gianforte 2018-02-22 21:06:55 UTC
Git commit b4d3f4a9840d34aaf5a58a1ad5b1c5dd272f9cd0 by Davide Gianforte.
Committed on 22/02/2018 at 21:03.
Pushed by gengisdave into branch 'master'.

Closing calculate occupied space window aborts the calculation

FIXED: [ 388266 ] Closing calculate occupied space window does not abort the calculation

Stops space calculation when user presses Esc or closes the popup window

M  +22   -0    krusader/Panel/krcalcspacedialog.cpp
M  +2    -0    krusader/Panel/krcalcspacedialog.h

https://commits.kde.org/krusader/b4d3f4a9840d34aaf5a58a1ad5b1c5dd272f9cd0