Closing calculate occupied space window aborts the calculation

FIXED: [ 388266 ] Closing calculate occupied space window does not abort the calculation
BUG: 388266

Stops space calculation when user presses Esc or closes the popup window